@@ -1,6 +1,7 @@
 Revision history for Catmandu-SRU
 
 {{$NEXT}}
+  - Fix treatment of namespaces in meta Parser (#31)
 
 0.41  2017-07-12 09:17:12 CEST
   - Fixing MODS encoding issue
